--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 
     <div class="container">
         <div id="menuScreen">
-            <h1>🎯 Number Guessing Game</h1>
+            <h1> Number Guessing Game</h1>
             <p class="subtitle">Choose Your Challenge!</p>
             <div class="difficulty-selection">
                 <button class="difficulty-btn beginner" onclick="startGame('beginner')">
-                    🌱 Beginner<br><small>1-50 | 10 tries</small>
+                     Beginner<br><small>1-50 | 10 tries</small>
                 </button>
                 <button class="difficulty-btn medium" onclick="startGame('medium')">
-                    ⚡ Medium<br><small>1-100 | 7 tries</small>
+                     Medium<br><small>1-100 | 7 tries</small>
                 </button>
                 <button class="difficulty-btn hard" onclick="startGame('hard')">
-                    🔥 Hard<br><small>1-200 | 5 tries</small>
+                     Hard<br><small>1-200 | 5 tries</small>
                 </button>
             </div>
         </div>
