Add Timer Level option to difficulty selection

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
                 <button class="difficulty-btn hard" onclick="startGame('hard')">
                      Hard<br><small>1-200 | 5 tries</small>
                 </button>
+                <button class="difficulty-btn option-b" onclick="startGame('timer')">
+                     Timer Level<br><small>1-100 | 5 tries</small>
+                </button>
             </div>
         </div>
-
         <div id="gameScreen" class="game-area">
             <h2 id="levelTitle">Level</h2>
             <div class="stats">
